<resources>
    <string name="app_name">VistaraAir</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vistara Airlines</string>
    <string name="nav_header_subtitle">Entertrainment App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_tv">TV</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_kids">Kids</string>
    <string name="menu_audio">Audio</string>
</resources>