<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tv"
            android:icon="@drawable/outline_tv_24"
            android:title="@string/menu_tv" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/outline_movie_24"
            android:title="@string/menu_movies" />

        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/outline_audiotrack_24"
            android:title="@string/menu_audio" />

        <item
            android:id="@+id/nav_kids"
            android:icon="@drawable/outline_kids_24"
            android:title="@string/menu_kids" />
    </group>
</menu>